--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>Gabriel Kusman</h1>
 
   <p>
-    Meu nome é Gabriel Kusman, tenho 17 anos, moro em São José dos Pinhais – PR e sou apaixonado por tecnologia.
+    Meu nome é Gabriel Kusman Cardoso, tenho 17 anos, moro em São José dos Pinhais – PR e sou apaixonado por tecnologia.
     Tenho interesse em desenvolvimento de software, especialmente back-end e inteligência artificial.
   </p>
 
@@ -19,7 +19,7 @@
     <li>Ouvir música</li>
   </ul>
 
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Chess_pieces_Sprite.svg/512px-Chess_pieces_Sprite.svg.png" alt="Xadrez" width="300">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Chess_pdt60.png/200px-Chess_pdt60.png" alt="Peão de Xadrez" width="100">
 
   <table>
     <tr>
