adição de novos arquivos

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li>Ouvir música</li>
   </ul>
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Chess_pdt60.png/200px-Chess_pdt60.png" alt="Peão de Xadrez" width="100">
+<img src="https://cdn.awsli.com.br/600x700/152/152999/produto/9033307/c0afd6bde5.jpg" alt="Peão de Xadrez" width="100">
 
   <table>
     <tr>
@@ -28,15 +28,15 @@
     </tr>
     <tr>
       <td>Japão</td>
-      <td><img src="https://flagcdn.com/w320/jp.png" width="100"></td>
+      <td><img src="https://flagcdn.com/w320/jp.png" width="100" height="60"></td>
     </tr>
     <tr>
       <td>Canadá</td>
-      <td><img src="https://flagcdn.com/w320/ca.png" width="100"></td>
+      <td><img src="https://flagcdn.com/w320/ca.png" width="100" height="60"></td>
     </tr>
     <tr>
       <td>Noruega</td>
-      <td><img src="https://flagcdn.com/w320/no.png" width="100"></td>
+      <td><img src="https://flagcdn.com/w320/no.png" width="100" height="60">
     </tr>
   </table>
 
