adição de novos arquivos

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Gabriel Kusman</title>
+  <title>Gabriel Kusman Cardoso</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Gabriel Kusman</h1>
+  <h1>Gabriel Kusman Cardoso</h1>
 
   <p>
     Meu nome é Gabriel Kusman Cardoso, tenho 17 anos, moro em São José dos Pinhais – PR e sou apaixonado por tecnologia.
-    Tenho interesse em desenvolvimento de software, especialmente back-end e inteligência artificial.
+    Tenho interesse em desenvolvimento de software, especialmente back-end e inteligência artificial. Tenho certa dificuldade com o front-end, mas sempre procuro aprender linguagens novas. Atualmente estou procurando me esforçar mais nos estudos.
   </p>
 
   <ul>
@@ -24,7 +24,7 @@
   <table>
     <tr>
       <th>País</th>
-      <th>Imagem</th>
+      <th>Bandeira</th>
     </tr>
     <tr>
       <td>Japão</td>
@@ -43,7 +43,7 @@
   <a href="https://www.tecmundo.com.br" target="_blank">Visite o TecMundo</a>
 
   <br><br>
-  <button onclick="mostrarMensagem()">Clique para ver uma mensagem!</button>
+  <button onclick="mostrarMensagem()">Antes de sair. Clique aqui!</button>
   <p id="mensagem"></p>
 
   <script src="script.js"></script>
