--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <p>
     Meu nome é Gabriel Kusman Cardoso, tenho 17 anos, moro em São José dos Pinhais – PR e sou apaixonado por tecnologia.
-    Tenho interesse em desenvolvimento de software, especialmente back-end e inteligência artificial. Tenho certa dificuldade com o front-end, mas sempre procuro aprender linguagens novas. Atualmente estou procurando me esforçar mais nos estudos.
+    Tenho interesse em desenvolvimento de software, especialmente back-end e inteligência artificial. Atualmente tenho focado em me tornar melhor todos os dias.
   </p>
 
   <ul>
