adição de novos arquivos

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gabriel Kusman Cardoso</title>
   <link rel="stylesheet" href="style.css">
+  <script defer src="script.js"></script>
 </head>
 <body>
   <h1>Gabriel Kusman Cardoso</h1>
@@ -19,7 +21,7 @@
     <li>Ouvir música</li>
   </ul>
 
-<img src="https://cdn.awsli.com.br/600x700/152/152999/produto/9033307/c0afd6bde5.jpg" alt="Peão de Xadrez" width="100">
+  <img src="https://cdn.awsli.com.br/600x700/152/152999/produto/9033307/c0afd6bde5.jpg" alt="Peão de Xadrez" width="100">
 
   <table>
     <tr>
@@ -36,7 +38,7 @@
     </tr>
     <tr>
       <td>Noruega</td>
-      <td><img src="https://flagcdn.com/w320/no.png" width="100" height="60">
+      <td><img src="https://flagcdn.com/w320/no.png" width="100" height="60"></td>
     </tr>
   </table>
 
@@ -44,8 +46,6 @@
 
   <br><br>
   <button onclick="mostrarMensagem()">Antes de sair. Clique aqui!</button>
-  <p id="mensagem"></p>
-
-  <script src="script.js"></script>
+  <div id="mensagem"></div>
 </body>
 </html>
