adição de novos arquivos

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <p>
     Meu nome é Gabriel Kusman Cardoso, tenho 17 anos, moro em São José dos Pinhais – PR e sou apaixonado por tecnologia.
-    Tenho interesse em desenvolvimento de software, especialmente back-end e inteligência artificial. Atualmente tenho focado em me tornar melhor todos os dias.
+    Tenho interesse em desenvolvimento de software, especialmente back-end e inteligência artificial. Atualmente tenho focado em me tornar melhor todos os dias. Abaixo vou lhe apresentar os meus três principais Hobbies e também três países que sonho em visitar:
   </p>
 
   <ul>
